[package]
name = "samsynk"
version = "0.3.0"
edition = "2021"
authors = ["Sam Howson <sam@shdh.uk>"]

[lib]
name = "samsynk"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.64"
lazy_static = "1.4.0"
prometheus = "0.13.3"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.9.0", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.4"
warp = "0.3.3"
reqwest = "0.11.20"

[dev-dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
tokio-modbus = { version = "0.9.0", default-features = false, features = ["rtu", "rtu-server"] }
test-context = "0.1.4"

[[test]]
name = "integration"
path = "tests/src/lib.rs"
