[workspace.package]
name = "samsynk"
description = "A home automation and monitoring system."
version = "2025.8.2"
edition = "2024"
authors = ["Sam Howson <sam@shdh.uk>"]

[workspace]
members = ["samsynk", "lib", "integration"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.64"
lazy_static = "1.4.0"
prometheus = "0.13.3"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.9.0", default-features = false, features = [
    "rtu",
    "rtu-server",
] }
tokio-serial = "5.4.4"
warp = "0.3.6"
bytes = "1.6.0"
reqwest = "0.12.3"
syslog = "7.0.0"
log = "0.4.27"

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "warn", priority = -1 }
dbg_macro = { level = "warn", priority = -1 }
print_stderr = { level = "warn", priority = -1 }
print_stdout = { level = "warn", priority = -1 }

[profile.release]
panic = "unwind"
debug = "full"
incremental = false
lto = true
