[package]
name = "integration"
version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
samsynk-lib = { path = "../lib" }
test-context = "0.1.4"
tokio.workspace = true
tokio-shared-rt = "0.1.0"
tokio-modbus.workspace = true
async-trait.workspace = true
reqwest = "0.12.22"
lazy_static.workspace = true
tokio-serial.workspace = true
futures.workspace = true

[dev-dependencies]
