[package]
name = "samsynk-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
lazy_static.workspace = true
log.workspace = true
prometheus.workspace = true
reqwest.workspace = true
syslog.workspace = true
tokio.workspace = true
tokio-modbus.workspace = true
warp.workspace = true
