[package]
name = "samsynk-exporter"
version = "0.1.0"
edition = "2021"
authors = ["Sam Howson <sam@shdh.uk>"]

[dependencies]
async-trait = "0.1.64"
lazy_static = "1.4.0"
prometheus = "0.13.3"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.7.0", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.4"
warp = "0.3.3"
samsynk = { path = "../"}
