[package]
name = "samsynk"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
tokio.workspace = true
tokio-modbus.workspace = true
tokio-serial.workspace = true
samsynk-lib = { path = "../lib" }
syslog.workspace = true
log.workspace = true
